--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ $(document).ready(function () {
     window.setTimeout(function(){
 
         // Move to a new location or you can do something else
-        window.location.href = "https://www.google.com";
+        window.location.href = "http://google.com/";
 
     }, 3000);
 });
